RESOLVED FIXED129613
Crash when going into video fullscreen on iOS
https://bugs.webkit.org/show_bug.cgi?id=129613
Summary Crash when going into video fullscreen on iOS
Simon Fraser (smfr)
Reported 2014-03-03 11:51:40 PST
Crash when going into video fullscreen on iOS
Attachments
Patch (2.01 KB, patch)
2014-03-03 11:52 PST, Simon Fraser (smfr)
dino: review+
Simon Fraser (smfr)
Comment 1 2014-03-03 11:52:16 PST
Simon Fraser (smfr)
Comment 2 2014-03-03 11:56:09 PST
Note You need to log in before you can comment on or make changes to this bug.