Crash when going into video fullscreen on iOS https://bugs.webkit.org/show_bug.cgi?id=129613

Reviewed by Dean Jackson.

We shouldn't reparent a UIView's layer without unparenting
the view first.

* UIProcess/ios/WebVideoFullscreenManagerProxy.mm:
(WebKit::WebVideoFullscreenManagerProxy::setVideoLayerID):

Canonical link: https://commits.webkit.org/147667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164997 268f45cc-cd09-0410-ab3c-d52691b4dbfc